Bug: Toolbar scroll issue for image on mobile

--- a/src/ui/less/layout/element-toolbar.less
+++ b/src/ui/less/layout/element-toolbar.less
@@ -456,7 +456,7 @@ fpd-element-toolbar.fpd-smart {
                 margin: 20px 0;
                 overflow: hidden;
                 flex: 1 0 auto;
-
+                max-width: none;
             }
 
             > .fpd-secondary-tools {
